--- a/vscode-backup/settings.json
+++ b/vscode-backup/settings.json
@@ -15,7 +15,7 @@
 
   "chat.commandCenter.enabled": false,
 
-  "editor.cursorBlinking": "smooth",
+  "editor.cursorBlinking": "expand",
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.minimap.renderCharacters": false,
   "editor.minimap.autohide": true,
